posting movie list

--- a/_posts/2023-03-03-cinematics-sans-mathematics.html
+++ b/_posts/2023-03-03-cinematics-sans-mathematics.html
@@ -1,5 +1,5 @@
 ---
-title: Movielist
+title: Cinematics (Sans Mathematics)
 layout: post 
 date: 2023-03-03 00:25
 image: ../assets/images/blog/crown.png
@@ -9,7 +9,7 @@ tags:
 - recommendations 
 category: blog 
 author: kjros
-description: ""
+description: "moves I like better than others"
 --- 
 
 <p>
@@ -36,7 +36,7 @@ description: ""
     <blockquote>
         <p>"Do you miss him?"</p>
     </blockquote>
-    <blockquote style="border-left: .3rem solid #cccccc">
+    <blockquote>
         <p>
             "Well, it's a matter of life after death. Now that he's dead, I have a life."
         </p>
@@ -46,7 +46,7 @@ description: ""
             "But he was your second husband. Your first husband also disappeared."
         </p>
     </blockquote>
-    <blockquote style="border-left: .3rem solid #cccccc">
+    <blockquote>
         <p>
             "That was his job. He was an illusionist."
         </p>
@@ -56,7 +56,7 @@ description: ""
             "But he never reappeared!"
         </p>
     </blockquote>
-    <blockquote style="border-left: .3rem solid #cccccc">
+    <blockquote>
         <p>
             "He wasn't a very good illusionist."
         </p>
@@ -65,12 +65,12 @@ description: ""
 
 <p>
     13 year old me loved this movie; 21 year old me loves it even more. Based on the game, six strangers are invited to mysterious dinner party.
-    The one thing they have in common? They're all being blackmailed. Of course, things go a little awry when the lights go out and their host, the blackmailer, is murdered.
+    The one thing they have in common? They're all being blackmailed. Of course, things go awry when the lights go out and their host, the blackmailer, is murdered.
     With dark humor and double entendres, this film captured my heart. 
 </p>
 
 <h3>
-    2. <i>Spider-Man: Into the Spider-verse</i> (2018)
+    2. <i>Spider-Man: Into the Spider-Verse</i> (2018)
 </h3>
 
 <div class="text-center"> 
@@ -89,9 +89,9 @@ description: ""
 </figure>
 
 <p>
-    Perhaps the most gorgeously animated movie in history. Watching <i>Into the Spider-verse</i> on the big screen left me breathless: 
-    the vivid color schemes, lines and hatches, blends of art styles, double-vision frames, electricity, crisp motions... 
-    Not only is it visually stunning, but it shattered my expectations for being a mere 'animated movie.' I will never tire of watching it. 
+    Perhaps the most gorgeously animated movie in history. Watching <i>Into the Spider-Verse</i> on the big screen left me breathless: 
+    the vivid colors, lines and hatches, blends of art styles, double-vision frames, electricity, crisp motions... 
+    Not only is it visually stunning, but it shattered my expectations for being a mere 'animated movie.'
 </p>
 
 <h3>
@@ -115,9 +115,9 @@ description: ""
 </figure>
 
 <p>
-    Whether detective Benoit Blanc is investigating a suspicious death and a dysfunctional family, or a murder on a private 
-    remote island, one thing ties the cases together: an outlandish Southern accent. Both Knives Out and its standalone sequel, The Glass Onion, 
-    boast colorful ensemble casts, witty jokes, and twisting mysteries. Can't wait for the third film. 
+    Whether detective Benoit Blanc is investigating a suspicious death in a dysfunctional family, or a murder on a private 
+    remote island, one thing remains constant: an outlandish Southern accent. Both Knives Out and its standalone sequel, The Glass Onion, 
+    boast colorful ensemble casts, witty jokes, and twisting mysteries. Anticipating the third film! 
 </p>
 
 <h3>
@@ -166,9 +166,10 @@ description: ""
 </figure>
 
 <p> 
-    Coraline is a girl seeking excitement - so why shouldn't she travel through a portal to the Other World, where its occupants have sewn buttons for eyes? 
-    Despite being scarred for life, my sister and I watched this movie at least every two weeks as kids. 
-    With lovingly-created stop-motion animation and a compelling story, I highly recommend - as long as you're not scared of the dark. 
+    Coraline: a twitchy, witchy girl who travels to a parallel universe, whose occupants have sewn buttons for eyes. 
+    This Other World may seem amazing... at first. 
+    Despite being scarred for life, my sister and I watched this movie every week as kids. 
+    With lovingly-created stop-motion animation and a fantastical story, highly recommend - if you're brave enough. 
 </p>
 
 <h3>
@@ -183,7 +184,7 @@ description: ""
 </div>
 
 <figure>
-    <blockquote style="border-left: .3rem solid #cccccc">
+    <blockquote>
         <p>
             "Look, we don't have to put a label on it. That's fine. I get it. But, you know, 
             I just... I need some consistency."
@@ -194,7 +195,7 @@ description: ""
             "I know."
         </p>
     </blockquote>
-    <blockquote style="border-left: .3rem solid #cccccc">
+    <blockquote>
         <p>
             "I need to know that you're not going to wake up in the morning and feel differently."
         </p>
@@ -208,8 +209,8 @@ description: ""
 
 <p>
     In a non-linear timeline, discover the beginning, middle, and end of the relationship between Tom and the eponymous Summer. 
-    One is a hopeless romantic, while the other doesn't believe in love. I found this film bittersweet, reminiscient of a time I 
-    can no longer remember. And yet, I was still drawn to it, despite how heartbreaking. 
+    One is a hopeless romantic, while the other doesn't believe in love. It's reminiscent of a time I can't remember, 
+    and just as sad... but maybe a little hopeful, too. 
 </p>
 
 <h3>
