--- a/_posts/2022-12-15-snapshots-dec-2022-nyc.html
+++ b/_posts/2022-12-15-snapshots-dec-2022-nyc.html
@@ -8,6 +8,7 @@ tag:
 - travel
 potpourri: true 
 category: potpourri 
+rel_path: nyc-22
 description: "Snapshots of a STEM Student: My winter visit to NYC in December 2022"
 author: kjros 
 playlist: 3mnX3YhAR3eGbrmLnpFXZD?si=c4996efde428405d
@@ -185,29 +186,3 @@ images:
 </p>
 
 <br>
-
-{% for image in page.images %}
-        <div class="container">
-            <img src="../assets/images/gallery/nyc-22/{{ image.image_path }}" alt="{{ image.alt }}" class="image">
-            <div class="overlay"> 
-                <div class="text">
-                    <p style="color:white;">
-                        {{ image.name }}
-                    <br>
-                        {{ image.loc }}
-                    {% if image.loc2 %}
-                        <br>
-                        {{ image.loc2 }}
-                    {% endif %}
-                    <br>
-                        {{ image.date }}
-                    </p>
-                    {% if image.desc %}
-                        <p style="color:white;">
-                            {{ image.desc }}
-                        </p>
-                    {% endif %}
-                </div>
-            </div>
-        </div>
-{% endfor %} 
