add anime dream queen

--- a/_posts/2000-01-02-currated-playlist.html
+++ b/_posts/2000-01-02-currated-playlist.html
@@ -13,7 +13,9 @@ songs:
 - path: 7sljA9XJXVCbbXLK5XpDtu?utm_source=generator&theme=0
   syn: rainwater, glass walls, mint, ink
 - path: 0F8SVNd2tFXkWFLG6gCyBW?utm_source=generator
-  syn: cherry ice, neon signs, popping boba 
+  syn: cherry ice, keys, popping boba
+- path: 1Uit6wCgxjlLs5dFoTkerh?utm_source=generator
+  syn: pixels, blue raspberry suckers, neon signs 
 - path: 60SG0hQJ06JFMJNLJSuR7k?utm_source=generator
   syn: mahogany, picture frames, haze
 - path: 6dgUya35uo964z7GZXM07g?utm_source=generator
