--- a/_posts/2000-01-02-currated-playlist.html
+++ b/_posts/2000-01-02-currated-playlist.html
@@ -14,6 +14,8 @@ songs:
   syn: rainwater, glass walls, mint, ink
 - path: 0F8SVNd2tFXkWFLG6gCyBW?utm_source=generator
   syn: cherry ice, keys, popping boba
+- path: 6jNZnEkAzcIt4cjULVUjC8?utm_source=generator&theme=0
+  syn: bubble gum, headphones, graffiti 
 - path: 1Uit6wCgxjlLs5dFoTkerh?utm_source=generator
   syn: pixels, blue raspberry suckers, neon signs 
 - path: 60SG0hQJ06JFMJNLJSuR7k?utm_source=generator
@@ -24,8 +26,6 @@ songs:
   syn: chocolate chip cookies, DDR, lip gloss 
 - path: 4j6kId9QIqhoXvqHKgSKa0?utm_source=generator
   syn: vinyl, pressed flowers, tea
-- path: 0S3xP5jVO84UzVeWpwXMK8?utm_source=generator&theme=0
-  syn: graffiti, blue moon ice cream, headphones 
 - path: 1BxfuPKGuaTgP7aM0Bbdwr?utm_source=generator
   syn: fog, bay breeze, ube boba, stationery, pastels 
 - path: 6MYJv37Mpj5njLLbxKWNun?utm_source=generator&theme=0
@@ -35,12 +35,6 @@ songs:
 - path: 2fmCA13dwQQOGBIbIOWRiJ?utm_source=generator&theme=0
   syn: stars, luminescence, melon 
 --- 
-
-<div class="text-center">
-    <p>
-        Last updated: <i>March 3, 2023</i>
-    </p>
-</div>
 
 <div class="text-center">
     <p>
