--- a/_posts/2022-12-29-adventures-in-LA.html
+++ b/_posts/2022-12-29-adventures-in-LA.html
@@ -7,6 +7,7 @@ headerImage: true
 tag:
 - travel
 - Los Angeles
+star: true
 category: blog
 author: kjros
 desription: "My recommendations after spending a summer in LA"
