--- a/_posts/2023-01-11-JMM-in-Boston.html
+++ b/_posts/2023-01-11-JMM-in-Boston.html
@@ -4,6 +4,7 @@ layout: post
 date: 2023-01-11 15:41
 image: ../assets/images/blog/fibonacci-spiral.png
 headerImage: true
+star: true
 tag: 
 - research
 - Boston
