--- a/_posts/2023-01-28-the-bookworms-booklist.html
+++ b/_posts/2023-01-28-the-bookworms-booklist.html
@@ -7,6 +7,7 @@ headerImage: true
 tags: 
 - reading
 - recommendations
+star: true
 category: blog 
 author: kjros 
 description: "Objectively, the best books to read, ever"
