moving header format around

--- a/_posts/2023-01-24-music-no-one-else-can-hear.html
+++ b/_posts/2023-01-24-music-no-one-else-can-hear.html
@@ -1,13 +1,13 @@
 ---
 title: Music No One Else Can Hear
 layout: post 
+star: true
 date: 2023-01-24 10:10
 image: ..\assets\images\blog\pen.png
 headerImage: true 
 tag: 
 - music 
 - sin/cos 
-category: blog
 author: kjros
 desription: "My relationship with music as an afterthought"
 --- 
