--- a/_drafts/2023-03-23-transit.html
+++ b/_drafts/2023-03-23-transit.html
@@ -2,3 +2,68 @@
 title: Public Transit 
 layout: post 
 category: blog 
+date: 2023-03-23 18:58 
+image: ../assets/images/blog/airplane-silhouette.jpg 
+headerImage: true 
+tag: 
+- ranking 
+- travel 
+author: kjros 
+description: "My personal ranking of major city public transit lines"
+--- 
+
+<p>
+    Let me tell you about the first time I tried taking the CTA.
+</p>
+
+<p>
+    Imagine me: bright eyed, fresh out of high school, looking to start a new life in Chicago. I had always dreamed of living somewhere big; 
+    growing up in the middle of nowhere will do that to you. The thrill of independence kept me alert, excited. 
+</p>
+
+<p>
+    Upon recieving my Ventra card, I meticulously planned my first trip: hop the green line at IIT, ride two stops down to Roosevelt, walk half a mile to Target, 
+    and don't get attacked on the way there. I paced back and forth under the elevated tracks, heart pounding, head roaring with the echoes of the train rushing past me. 
+</p>
+
+<p>
+    When I finally gathered the courage to scan my pass, I was denied. I tried to load fares onto the card, which also didn't work. 
+    Embarassed, I slinked back to my dorm, convinced I had done something wrong. 
+</p>
+
+<p>
+    Turns out, you have to activate your card by phone. It's not like there's instructions on the back, or anything. 
+</p>
+
+<p>
+    Since then, I've had the opportunity to travel many different cities. Many transit systems nowadays encourage buying passes on your phone, but I 
+    much prefer collecting the physical cards. There's something uniquely exhilarating about recieving that card: in your hand, you 
+    have the opportunity to go anywhere. Catch the T, ride the subway, chase after an SF trolley: it's a new adventure. 
+    And I still fall in love with that independence - it's like I belong there. Or that I'm capable of something, so different than normal life. 
+</p>
+
+<hr>
+
+<p>
+    As of 3/23/23, I've collected seven cards: Chicago, Toronto, Los Angeles, San Francisco, New York City, Boston, and Washington, DC.
+    Since I am clearly an expert on all things public transit, I've decided to rank each of their systems by the following: 
+</p>
+
+<p>
+    <ol>
+        <li>Ease of Access: how easy is it to find their stations? Is navigation difficult? Are their elevators ever working? (2)</li>
+        <li>Speed and Consistency: is taking the transit any faster than walking? And do the trains/buses ever ghost passengers? (3)</li>
+        <li>User Experience (UX): </li>
+        <li>Aesthetic: how cool is the design of the stations? Will taking a picture be Instagram-able? (1)</li>
+        <li>Card: how much does adding this card to my collection increase its value? (1)</li>
+    </ol>
+</p>
+
+<p>
+    Each category will be rated out of 10. The final scoring is achieved by multiplying each category score by its corresponding weight (as described above), 
+    then summed up. The maximum rating a city can achieve is 10/10. In mathematical notation: 
+</p>
+
+<div class="text-center">
+    <img src="..\assets\images\blog\blog-post\transit-ranking\score-eq.png">
+</div>
