font weight updates

--- a/_drafts/2023-03-23-transit.html
+++ b/_drafts/2023-03-23-transit.html
@@ -22,7 +22,7 @@ description: "My personal ranking of major city public transit lines"
 </p>
 
 <p>
-    Upon recieving my Ventra card, I meticulously planned my first trip: hop the green line at IIT, ride two stops down to Roosevelt, walk half a mile to Target, 
+    Upon recieving my Ventra card, I meticulously planned my first trip: hop the Green line at IIT, ride two stops down to Roosevelt, walk half a mile to Target, 
     and don't get attacked on the way there. I paced back and forth under the elevated tracks, heart pounding, head roaring with the echoes of the train rushing past me. 
 </p>
 
@@ -36,7 +36,7 @@ description: "My personal ranking of major city public transit lines"
 </p>
 
 <p>
-    Since then, I've had the opportunity to travel many different cities. Many transit systems nowadays encourage buying passes on your phone, but I 
+    Since then, I've visited many different cities. Many transit systems nowadays encourage buying passes on your phone, but I 
     much prefer collecting the physical cards. There's something uniquely exhilarating about recieving that card: in your hand, you 
     have the opportunity to go anywhere. Catch the T, ride the subway, chase after an SF trolley: it's a new adventure. 
     And I still fall in love with that independence - it's like I belong there. Or that I'm capable of something, so different than normal life. 
@@ -53,7 +53,7 @@ description: "My personal ranking of major city public transit lines"
     <ol>
         <li>Ease of Access: how easy is it to find their stations? Is navigation difficult? Are their elevators ever working? (2)</li>
         <li>Speed and Consistency: is taking the transit any faster than walking? And do the trains/buses ever ghost passengers? (3)</li>
-        <li>User Experience (UX): </li>
+        <li>User Experience (UX): how are the views? Are you comfortable, or always on edge because of the K9s swarming the car? (3)</li>
         <li>Aesthetic: how cool is the design of the stations? Will taking a picture be Instagram-able? (1)</li>
         <li>Card: how much does adding this card to my collection increase its value? (1)</li>
     </ol>
@@ -67,3 +67,94 @@ description: "My personal ranking of major city public transit lines"
 <div class="text-center">
     <img src="..\assets\images\blog\blog-post\transit-ranking\score-eq.png">
 </div>
+
+<p>
+    Let's get started!
+</p>
+
+<hr>
+
+<h3>1. Chicago</h3>
+
+<div class="text-center">
+    <img src="../assets/images/blog/blog-post/transit-ranking/chi-map.jpg" alt="map of Chicago train lines by color" style="max-width: 65%;">
+    <br>
+    <figure>
+        <figcaption>The CTA train lines, or the L</figcaption>
+    </figure>
+</div>
+<p>
+    Chicago boasts about its unique "L" trains, short for "elevated." Rather than running underground, most
+    tracks lie overhead. It's second nature to go silent once a train passes above you, then continue your conversation afterwards. 
+    In total, there are eight lines, all of which converge in a "loop" shape in downtown Chi (thus, the inspiration behind the area's nickname: The Loop). 
+</p>
+
+<div class="text-center">
+    <img src="../assets/images/blog/blog-post/transit-ranking/mtcc.jpg">
+</div>
+
+<p>
+    Fun fact: IIT has its own stop off the Green line, entitled "35th-Bronzeville-IIT."
+    The track runs above our campus center, which was built second. 
+    To dampen the sound, the architect built a large metal structure enclosing the line, which makes for a very cool tunnel.
+</p>
+
+<p>
+    <b>
+        Ease of Access:
+    </b>
+    For the most part, follow the tracks: since they're above ground, you'll find a stop eventually. 
+    Unfortunately, there's always two sets of stairs, only one of which you're allowed to go <i>up</i>. Additionally, 
+    very rarely will you see escalators at a station, let alone working escalators. The elevators aren't fantastic, either. 
+    Score: 4/10.
+</p>
+
+<p>
+    <b>
+        Speed and Consistency: 
+    </b>
+    Boasting a top speed of 55mph, train rides aren't nearly as bad. I can head to the Loop within 30 minutes by bus, or 
+    15 minutes by train. On the other hand, consistency is hard to come by. Buses are quite unreliable, often 
+    passing by the stop or not showing up. 
+    There's been a handful of times when a line is out of service, so passengers must exit the train and take a shuttle bus 
+    to the next few stops, easily adding 20 minutes to your commute. Chicago, do better. 
+    Score: 3/10.
+</p>
+
+<p>
+    <b>
+        UX: 
+    </b>
+    I will say, taking the train is unpleasant if you're on half the lines (typicall those that run through the South Side). 
+    The Red line is notorious for being unsafe, especially at night, 
+    so I avoid it as much as I can.  
+    On the busiest days, you have to push your way in, or wait for the next train. 
+    The floors are usually pretty dirty, and salty in the winter. I won't comment on the smell.
+    A huge pitfall of elevated tracks? Having to wait outside in winter months. There might be one or two heated areas, but 
+    they don't always work. 
+    The only reason this category gains any points: the views. It's beautiful, once you enter downtown. Passing between skyscrapers, 
+    looking over the Chicago river, gorgeous graffiti murals stretching 20 stories tall: there's nothing quite like it. 
+    Score: 3/10.
+</p>
+
+<p>
+    <b>
+        Aesthetic: 
+    </b>
+    Most of the time, it's not very pretty. The support beams are rusted, and the stations themselves aren't too inspiring. 
+    Nothing really to comment on. 
+    Score: 4/10.
+</p>
+
+<p>
+    <b>
+        Card: 
+    </b>
+    I have a special student pass with my picture on it, so not ideal. However, regular Ventra cards have a beautiful gradient of blue triangles, 
+    which is pleasing. 
+    Score: 7/10.
+</p>
+
+<p>
+    Calculated score: <b>3.7/10</b>. 
+</p>
