start toronto review

--- a/_drafts/2023-03-23-transit.html
+++ b/_drafts/2023-03-23-transit.html
@@ -180,6 +180,10 @@ description: "My personal ranking of major city public transit lines"
     Score: 4/10.
 </p>
 
+<div class="text-center">
+    <img src="../assets/images/blog/blog-post/transit-ranking/ventra.png" alt="blue ventra card">
+</div>
+
 <p>
     <b>
         Card
@@ -192,4 +196,29 @@ description: "My personal ranking of major city public transit lines"
 
 <p>
     Calculated score: <b>3.7/10</b>. 
+</p>
+
+<hr> 
+
+<h3>2. Toronto</h3>
+
+<div class="text-center"> 
+    <img src="../assets/images/blog/blog-post/transit-ranking/toronto-map.jpg" alt="map of Toronto train lines" style="max-width: 85%;">
+    <br>
+    <figure>
+        <figcaption>The Toronto Transit Commission (TTC) subway lines</figcaption>
+    </figure>
+</div>
+
+<p>
+    Although Toronto uses a combination of buses, subway cars, and streetcars, the most common transit service in the downtown area 
+    are the streetcars! 
+</p>
+
+<div class="text-center">
+    <img src="../assets/images/blog/blog-post/transit-ranking/toronto-street-car.jpg" alt="red toronto street car in the snow" style="max-width: 85%;">
+</div>
+
+<p>
+    Having recently watched Turning Red, I was delighted to step out of the wintery snow and onto the bright red bus. 
 </p>
