finishing jan23 post

--- a/_drafts/2023-01-01-snapshots-jan-2023-march-2023.html
+++ b/_drafts/2023-01-01-snapshots-jan-2023-march-2023.html
@@ -10,28 +10,65 @@ description: "Snapshots of a STEM student: January 2023 - March 2023"
 author: kjros 
 playlist: 3tL23A9Nx5TWd3Yc6AW09g?si=c87694bf590843e0
 images: 
-- image_path: rose.jpg 
-  alt: glass of rose in front of a golden light tree 
-  name: Bar Siena 
+- image_path: happy-lamb.jpg 
+  alt: collection of uncooked meats and noodles 
+  name: Happy Lamb Hot Pot 
+  loc: Chinatown, Chicago 
+  date: March 11, 2023 
+  desc: I tried hot pot for the first time in 2021, and I don't think any other hot pot restaurant can ever compare. An IIT favorite 
+- image_path: wndr-box-lights.png 
+  alt: mirror cubes with flashing blue lights 
+  name: WNDR Museum 
+  loc: West Loop, Chicago 
+  date: March 11, 2023 
+  desc: tripping 
+- image_path: sushi-dokku-sushi.jpeg 
+  alt: salmon sushi 
+  name: Sushi Dokku 
   loc: Fulton Market, Chicago 
-  date: January 2, 2023 
-- image_path: pink-puffs.jpg 
-  alt: pink fluffy flowers on a tree 
-  name: Museum of Science 
-  loc: Boston, MA 
-  date: January 3, 2023 
-- image_path: science-museum-mirror.jpg 
-  alt: my friends standing in front of checkerboard of mirror squares 
-  name: Museum of Science 
-  loc: Boston, MA 
-  date: January 3, 2023 
-  desc: Let's play 'Where's Kaylee?' 
-- image_path: mariott-boston-view.jpg 
-  alt: overcast view of boston streets 
-  name: Marriott Copley 
-  loc: Back Bay, Boston, MA 
-  date: January 4, 2023 
-  desc: Cloudy with a chance of math talks 
+  date: February 25, 2023 
+  desc: Really good salmon sushi (no clue how it was so good) 
+- image_path: lucy-bekfast-burg.jpg 
+  alt: burger with sweet potato fries 
+  name: Lucy's #7 
+  loc: South Beloit, IL 
+  date: February 24, 2023 
+  desc: Basically, the best burger joint I've ever had the pleasure of eating in (and working in)! A fan-favorite of my friends and family, Lucy's offers Burgers of the Months (BOMs). Pictured: the Breakfast BOM, sweet fries, and amazing chipotle aioli
+- image_path: sweet-bean-thai-tea.jpg 
+  alt: tray of bao buns and thai tea 
+  name: Sweet Bean 
+  loc: South Loop, CHicago 
+  date: February 23, 2023 
+  desc: The cutest Taiwanese bakery! Try coffee, tea, and a million different pastries. Tomato-bacon puffs, sesami-mochi bun, and Thai iced tea
+- image_path: il-culaccino-calamarii.jpg
+  alt: plate of fried calamari 
+  name: Il Culaccino 
+  loc: South Loop, CHicago 
+  date: February 2, 2023
+  desc: Aka, perhaps the best calamari I've ever had
+- image_path: il-culaccino-spicy-pesto.jpg 
+  alt: pesto pasta 
+  name: Il Culaccino 
+  loc: South Loop, Chicago 
+  date: February 2, 2023
+  desc: Mouth-watering spicy pesto pasta 
+- image_path: eleven-deli-corned-beef.jpg 
+  alt: plate of corned beef sandwich with a flag in it 
+  name: Eleven City Diner 
+  loc: South Loop, Chicago 
+  date: January 29, 2023 
+  desc: Corned beef, matzo ball soup, and my first egg cream shake. My friend described it as "fancy chocolate milk", which is valid
+- image_path: kasumi-sushi-unl.jpg 
+  alt: fried sushi rolls 
+  name: Kasumi Sushi 
+  loc: Lincoln, NE
+  date: January 21, 2023 
+  desc: salmon + mango + more salmon 
+- image_path: shedd-blue-jellyfish.jpg 
+  alt: light blue jellyfish in a dark tank 
+  name: The Shedd Aquarium 
+  loc: Museum Campus, Chicago 
+  date: January 16, 2023 
 - image_path: menger-sponge.jpg 
   alt: level 3 menger sponge out of lego blocks 
   name: JMM 
@@ -39,6 +76,28 @@ images:
   loc2: Back Bay, Boston, MA 
   date: January 4, 2023 
   desc: Don't talk to me unless you've personally built a Menger sponge out of 32,000 Lego bricks
+- image_path: mariott-boston-view.jpg 
+  alt: overcast view of boston streets 
+  name: Marriott Copley 
+  loc: Back Bay, Boston, MA 
+  date: January 4, 2023 
+  desc: Cloudy with a chance of math talks 
+- image_path: science-museum-mirror.jpg 
+  alt: my friends standing in front of checkerboard of mirror squares 
+  name: Museum of Science 
+  loc: Boston, MA 
+  date: January 3, 2023 
+  desc: Let's play "Where's Kaylee?" 
+- image_path: pink-puffs.jpg 
+  alt: pink fluffy flowers on a tree 
+  name: Museum of Science 
+  loc: Boston, MA 
+  date: January 3, 2023 
+- image_path: rose.jpg 
+  alt: glass of rose in front of a golden light tree 
+  name: Bar Siena 
+  loc: Fulton Market, Chicago 
+  date: January 2, 2023 
 --- 
 
 <br> 
